# back_end/school-app/storage/api-docs/api-docs.json
@@ -6,7 +6,7 @@
     },
     "servers": [
         {
-            "url": "http://school-app.test/api"
+            "url": "http://127.0.0.1:8000/api"
         }
     ],
     "paths": {
@@ -535,7 +535,7 @@
                 }
             }
         },
-        "/login": {
+        "/admin/login": {
             "post": {
                 "tags": [
                     "admin"
